--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_above="@+id/linearLayout" />
+        android:layout_above="@+id/linearLayout"
+        android:src="@drawable/smile"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -29,17 +30,15 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Standart"
-            android:id="@+id/standartButton"
+            android:text="Original smile"
+            android:id="@+id/origSmile"
             android:layout_weight="1" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Invert G&amp;B"
-            android:id="@+id/invertButton"
+            android:text="Cropped smile"
+            android:id="@+id/cropSmile"
             android:layout_weight="1" />
     </LinearLayout>
-
-
 </RelativeLayout>
